# orbita3d_control

./: .gitignore  Cargo.toml  README.md  mkdocs.yaml  rust-toolchain.toml
.github/workflows/: docs.yml  python.yml  rust.yml
docs/: .gitignore  generate_api_docs.sh  index.md  requirements.txt
docs/custom_theme/: main.html
docs/installation/: install_package.md  installation_ethercat.md  orbita_c.md  python.md  ros.md  rust_crate.md
docs/theory/: kinematics.md  limits.md  parameters.md
docs/tutos/: connection.md  led_blinking.md
orbita3d_c_api/: Cargo.toml  README.md  build.rs  orbita3d.h  package.xml  pyproject.toml
orbita3d_c_api/c-examples/: controller.c  kinematics.c
orbita3d_c_api/python/: README.md  controller.ipynb  kinematics.ipynb  numerical_ik.ipynb
orbita3d_c_api/python/orbita3d/: __init__.py
orbita3d_c_api/python/tests/: __init__.py  test_controller.py  test_kinematics.py
orbita3d_c_api/src/: controller.rs  kinematics.rs  lib.rs  sync_map.rs
orbita3d_controller/: Cargo.toml  README.md  output.csv
orbita3d_controller/benchmarking/: plot_test_data.py
orbita3d_controller/config/: dxl_poulpe.yaml  dxl_poulpe_test.yaml  dxl_serial.yaml  ethercat_poulpe.yaml  fake.yaml  test_input.csv
orbita3d_controller/examples/: ethercat_server.rs  poulpe3d.rs  poulpe3d_test.rs  test_multiturn.rs
orbita3d_controller/scripts/: plot_csv.py
orbita3d_controller/src/: dynamixel_serial.rs  fake.rs  lib.rs
orbita3d_controller/src/io/: cached_dynamixel_serial.rs  cached_poulpe.rs  dynamixel_serial.rs  fake.rs  mod.rs  poulpe.rs  poulpe_ethercat.rs
orbita3d_description/: CMakeLists.txt  README.md  package.xml
orbita3d_description/config/: fake.yaml  fake_neck.yaml  left_wrist_2.yaml  neck_2.yaml  neck_beta.yaml  right_wrist_2.yaml  test.rviz  test_controllers.yaml
orbita3d_description/launch/: display.launch.py  test.launch.py
orbita3d_description/ros2_control/: orbita3d.ros2_control.xacro  orbita3d_actuator_control.ros2_control.xacro  orbita3d_axis_control.ros2_control.xacro  orbita3d_raw_motor_control.ros2_control.xacro
orbita3d_description/urdf/: orbita3d.urdf.xacro  test_orbita3d.urdf.xacro
orbita3d_kinematics/: Cargo.toml  README.md
orbita3d_kinematics/src/: conversion.rs  jacobian.rs  lib.rs  torque.rs  velocity.rs
orbita3d_kinematics/src/position/: forward.rs  inverse.rs  mod.rs
orbita3d_system_hwi/: CMakeLists.txt  orbita3d_system_hwi.xml  package.xml
orbita3d_system_hwi/include/orbita3d_system_hwi/: orbita3d_system_hwi.hpp
orbita3d_system_hwi/src/: orbita3d_system_hwi.cpp
