[package]
name = "orbita3d_c_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.147"
env_logger = "0.9.0"
log = "0.4"
once_cell = "1.18.0"
orbita3d_controller = { version = "0.1.0", path = "../orbita3d_controller" }
orbita3d_kinematics = { version = "0.1.0", path = "../orbita3d_kinematics" }
motor_toolbox_rs = { git = "https://github.com/pollen-robotics/motor_toolbox_rs", branch="develop" }

[build-dependencies]
cbindgen = "0.24.5"


[lib]
name = "orbita3d_c_api"
crate-type = ["staticlib", "cdylib"]
