[package]
name = "orbita3d_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cache_cache = "0.1.0"
log = "0.4.20"
motor_toolbox_rs = "0.2.0"
orbita3d_kinematics = { version = "0.1.0", path = "../orbita3d_kinematics" }
rustypot = "0.4.1"
serde = { version = "1.0.183", features = ["derive"] }
serde_yaml = "0.9.25"
serialport = "4.2.2"

[dev-dependencies]
rand = "0.8.5"
