[package]
name = "orbita3d_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cache_cache = "0.1.1"
log = "0.4.20"
env_logger = "0.8.4"
# motor_toolbox_rs = { git = "https://github.com/pollen-robotics/motor_toolbox_rs", branch="support-poulpe" }
motor_toolbox_rs = { git = "https://github.com/pollen-robotics/motor_toolbox_rs", branch="24-add-get_board_state" }
orbita3d_kinematics = { version = "0.1.0", path = "../orbita3d_kinematics" }
rustypot = { git = "https://github.com/pollen-robotics/rustypot", branch="support-poulpe" }
serde = { version = "1.0.183", features = ["derive"] }
serde_yaml = "0.9.25"
serialport = "4.2.2"
timeit = "0.1.2"
clap = { version = "4.0.32", features = ["derive"] }

[dev-dependencies]
rand = "0.8.5"
