[package]
name = "orbita3d_kinematics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
levenberg-marquardt = "0.12.0"
nalgebra = "0.30.1"
ndarray = "0.15.6"
ndarray_einsum_beta = "0.7.0"
nshare = "0.9.0"
serde = { version = "1.0.183", features = ["derive"] }

[dev-dependencies]
rand = "0.8.5"
